# urirun-connector-get-node

./: CHANGELOG.md  Makefile  README.md  TODO.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
examples/: README.md  quickstart.sh
scripts/: ci_urirun_llm_smoke.py
tests/: test_get_node.py
urirun_connector_get_node/: __init__.py  connector.manifest.json  contracts.py  core.py
