[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-get-node"
version = "0.1.0"
description = "Get Node connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun>=0.4.14",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/get-node"
Repository = "https://github.com/if-uri/urirun-connector-get-node"

[project.scripts]
urirun-get-node = "urirun_connector_get_node.core:main"

[project.entry-points."urirun.bindings"]
get-node = "urirun_connector_get_node.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_get_node*"]

[tool.setuptools.package-data]
urirun_connector_get_node = ["connector.manifest.json"]
